@@ -1,0 +1,6 @@
+While editing a link you can request thumbnail of the given link at the time.
+It uses the Google page insights API to get a thumbnail.
+
+It will be created if the option is actived. To remove uncheck the option.
+To refresh uncheck the option. Save. This will delete the data.
+Check the option again and the thumbnail will be created again.
